# aiarena-client

./: MatchRunner.py  README.md  bot_requirements.txt  pyproject.toml  setup.py  start_server.py
arenaclient/: __main__.py  aiarena_web_api.py  bot.py  client.py  default_config.py  default_local_config.py  default_test_config.py  example_local_config.py  example_matches  matches.py  mini_map.py  result.py  utl.py
arenaclient/proxy/: frontend.py  lib.py  proxy.py  server.py  supervisor.py
arenaclient/sc2/: __init__.py  game_info.py  game_state.py  position.py  score.py  unit.py  units.py
