[tool.poetry]
name = "aiarena-client"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python = "4.2.0.34"
imutils = "^0.5.3"
requests = "^2.24.0"
portpicker = "^1.3.1"
s2clientprotocol = "^4.13.0"
aiohttp = "^3.6.2"
termcolor = "^1.1.0"
psutil = "^5.7.2"
aiodns = "^2.0.0"
brotli = "^1.0.7"
cchardet = "^2.1.6"
aiohttp-jinja2 = "^1.2.0"
loguru = "^0.5.1"
uvloop = "^0.14.0"
cefpython3 = "^66.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
