[tool.poetry]
name = "aiarena-client"
version = "0.1.0"
description = ""
authors = ["BuRny <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
portpicker = "^1.3.1"
s2clientprotocol = "^4.13.0"
aiohttp = "^3.7.4"
termcolor = "^1.1.0"
psutil = "^5.7.2"
aiohttp-jinja2 = "^1.2.0"
loguru = "^0.5.3"
uvloop = "^0.14.0"
cefpython3 = "^66.0"
jinja2 = "^2.11.2"
numpy = "^1.19.2"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
